# Project-NUEVO

./: .gitignore  README.md  dc_motor_1_0402_19-04.csv  plot.py
firmware/: README.md
firmware/arduino/src/: config.h
firmware/arduino/src/drivers/: DCMotor.cpp  ServoController.cpp  ServoController.h
firmware/arduino/src/messages/: TLV_Payloads.h
firmware/arduino/src/modules/: MessageCenter.cpp  MessageCenter.h  PersistentStorage.cpp  PersistentStorage.h  SensorManager.h  (+7 more)
firmware/notes/: pins_rev_A.h
firmware/tests/test_dc_motor_pid/: test_dc_motor_pid.ino
firmware/tests/test_encoder/: test_encoder.ino
firmware/tests/test_servo/: test_servo.ino
firmware/tests/test_stepper/: test_stepper.ino
firmware/tests/test_uart_tlv/: test_uart_tlv.ino
firmware/tests/test_user_io/: test_user_io.ino
nuevo_ui/backend/: pyproject.toml
nuevo_ui/backend/nuevo_bridge/: __main__.py  app.py  config.py  payloads.py  runtime.py  serial_manager.py  webapp.py
ros2_ws/: README.md  RPI_SETUP.md  TESTING.md
ros2_ws/docker/: Dockerfile.bridge  docker-compose.rpi.yml  docker-compose.vm.yml  entrypoint.bridge.sh
ros2_ws/src/bridge/: package.xml  setup.cfg
ros2_ws/src/bridge/bridge/: bridge_node.py  firmware_state_service.py  main.py  ros_controller.py  ros_conversions.py
ros2_ws/src/bridge/launch/: bridge.launch.py
ros2_ws/src/bridge/test/: test_firmware_state_service.py
ros2_ws/src/bridge_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robot/: package.xml  setup.cfg
ros2_ws/src/sensors/: package.xml  setup.cfg
ros2_ws/src/vision/: package.xml  setup.cfg
(+46 files in other folders)
