[metadata]
name = bridge
version = 0.1.0
description = ROS2 wrapper around the shared nuevo_bridge runtime
author = MAE 162 Staff
license = MIT

[options]
packages = find:
install_requires =
    setuptools
    fastapi>=0.109.0
    uvicorn[standard]>=0.27.0

[options.packages.find]
include = bridge*

[options.data_files]
share/ament_index/resource_index/packages =
    resource/bridge
share/bridge =
    package.xml
share/bridge/launch =
    launch/bridge.launch.py

[options.entry_points]
console_scripts =
    bridge = bridge.main:main

[develop]
script_dir = $base/lib/bridge
[install]
install_scripts = $base/lib/bridge
